Made longest streak historical to all commits not just past year. Labeled statistics more clearly. Fixed an issue with repeating/overlapping month headers.

--- a/css/bb.css
+++ b/css/bb.css
@@ -10,7 +10,11 @@
   width: 680px;
   margin: 0px auto;
   font-family: Tahoma, Verdana, sans-serif;
-  font-size: 12pt;
+  font-size: 14pt;
+}
+
+.statistics p {
+  margin: 0px;
 }
 
 .clear {
@@ -23,6 +27,7 @@
   width: 33%;
   border-left: 1px solid #D0D0D0;
   text-align: center;
+  padding: 15px 0px;
 }
 
 .bitbucket-statistics .current-streak {
@@ -31,11 +36,13 @@
   border-left: 1px solid #D0D0D0;
   border-right: 1px solid #D0D0D0;
   text-align: center;
+  padding: 15px 0px;
 }
 
 .bitbucket-statistics h3 {
-  font-size: 14pt;
-  margin: 28px 0 0;
+  font-size: 12pt;
+  margin: 0px;
+  line-height: 20px;
   padding: 0;
 }
 
